tests/NormalTests/paczka1/fuzzy1/89214824.err
Error in line 4: YGmWZskq A839 16,5
Error in line 3: 0HX S771 35,5
Error in line 20: nG5\a A839 186,7
Error in line 17: dcgp S959 21,0
Error in line 8: nG5Ja A839 90,2
Error in line 25: YGmWZskq A871 80,9
Error in line 24: 0HX S771 96,8
Error in line 31: 0HX A871 53,7
Error in line 33: 0HX A839 66,7
